hphp/hack/test/typecheck/nameof/parsing/nameof_float.php.exp
File "nameof_float.php", line 5, characters 12-15:
`nameof` can only be used with a class (Parsing[1002])
