hphp/hack/test/typecheck/nameof/parsing/nameof_float.php
<?hh

class C {
  public static function f(): void {
    nameof 3.14;
  }
}
